--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="Helder-SouTryber.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
     <h1>Helder Daniel Silva Araújo</h1>
 </body>
 </html>
