--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <img src="Helder-SouTryber.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
     <h1>Helder Daniel Silva Araújo</h1>
+    <hr>
+    <p>
+        Me chamo Helder Daniel, tenho 20 anos e sou nativo de Acari-RN Brasil, sou apaixonado por programação e lasanhas S2!
+    </p>
+    <hr>
 </body>
 </html>
