--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portifólio Helder</title>
 </head>
+
 <body>
-    <img src="Helder-SouTryber.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
+    <img id="fotoPerfil" src="Helder-SouTryber.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
     <h1>Helder Daniel Silva Araújo</h1>
     <hr>
     <p>
-        Me chamo Helder Daniel, tenho 20 anos e sou nativo de Acari-RN Brasil, sou apaixonado por programação e lasanhas S2!
+        Me chamo Helder Daniel, tenho 20 anos e sou nativo de Acari-RN Brasil, sou apaixonado por programação e lasanhas
+        S2!
     </p>
     <hr>
+    <ul>
+        <li><strong>Figma</strong></li>
+        <li><strong>Experiência do usuário (UX)</strong> </li>
+        <li><strong>HTML</strong></li>
+        <li><strong>JavaScript</strong></li>
+        <li><strong>CSS</strong></li>
+        <li><strong>Vue.js</strong></li>
+        <li><em>Adobe XD</em></li>
+        <li>Bootstrap</li>
+        <li>Adobe Photoshop</li>
+        <li>Adobe After Effects</li>
+        <li><em>Design de interface do usuário</em></li>
+        <li>Linux</li>
+        <li><em>Git</em></li>
+        <li>GitHub</li>
+    </ul>
 </body>
+
 </html>
