links internos e externos adicionados

--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
 </head>
 
 <body>
+    <header>
+        <span> | </span>
+        <a href="#fotoPerfil">Foto</a>
+        <span> | </span>
+        <a href="#descricao">Descrição</a>
+        <span> | </span>
+        <a href="https://medium.com/@helder_dsa" target="_blank">Meu Medium</a>
+        <span> | </span>
+        <a href="#habilidades">Habilidades</a>
+        <span> | </span>
+    </header>
+    <hr>
     <img id="fotoPerfil" src="Helder-SouTryber.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
     <h1>Helder Daniel Silva Araújo</h1>
     <hr>
-    <p>
+    <p id="descricao">
         Me chamo Helder Daniel, tenho 20 anos e sou nativo de Acari-RN Brasil, sou apaixonado por programação e lasanhas
         S2!
     </p>
     <hr>
-    <ul>
+    <ul id="habilidades">
         <li><strong>Figma</strong></li>
         <li><strong>Experiência do usuário (UX)</strong> </li>
         <li><strong>HTML</strong></li>
