--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Portifólio Helder</title>
 </head>
 
 <body>
-    <header>
-        <span> | </span>
+    <nav class="nav">
         <a href="#fotoPerfil">Foto</a>
-        <span> | </span>
         <a href="#descricao">Descrição</a>
-        <span> | </span>
         <a href="https://medium.com/@helder_dsa" target="_blank">Meu Medium</a>
-        <span> | </span>
         <a href="#habilidades">Habilidades</a>
-        <span> | </span>
-    </header>
+    </nav>
+    
     <hr>
-    <img id="fotoPerfil" src="Helder-SouTryber.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
+    <img id="fotoPerfil" src="Helder-HeroIMG.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
     <h1>Helder Daniel Silva Araújo</h1>
     <hr>
     <p id="descricao">
