Hero img e txt adicionados

--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
         <a href="https://medium.com/@helder_dsa" target="_blank">Meu Medium</a>
         <a href="#habilidades">Habilidades</a>
     </nav>
-    
-    <hr>
-    <img id="fotoPerfil" src="Helder-HeroIMG.png" alt="Foto de perfil de Helder" width="250" style="border-radius: 250px;">
-    <h1>Helder Daniel Silva Araújo</h1>
+    <div></div>
+    <div class="hero">
+        <div>
+            <img id="fotoPerfil" src="Helder-HeroIMG.png" alt="Foto de perfil de Helder" class="heroimg">
+        </div>
+        <div class="herotext">
+            <h1>olá!!</h1>
+            <h1>helder daniel aqui</h1>
+            <h2>ux designer e dev front-end</h2>
+        </div>
+    </div>
     <hr>
     <p id="descricao">
         Me chamo Helder Daniel, tenho 20 anos e sou nativo de Acari-RN Brasil, sou apaixonado por programação e lasanhas
